Cambio en contactos

--- a/PortafolioServicios/Index.html
+++ b/PortafolioServicios/Index.html
@@ -68,6 +68,12 @@
         </section>
         <section id="contacto">
             <h4>Contactos</h4>
+            <p>
+                josue.salazar@epn.edu.ec 
+            </p>
+            <p>
+                0992199135
+            </p>
         </section>
 </body>
 </html>
